src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_local_augmentation.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_local/augment.one\")"
---
Model: fixtures/design_local/target.on
Tests: 0/0
Parameters:
  radius = 10
  diameter = 20
  circumference = 62.83
