src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_sibling_designs.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"sibling_designs/parent.on\")"
---
Model: fixtures/sibling_designs/parent.on
Tests: 0/0
Parameters:
  mass = 100 :kg
  w_a = 372 :N
  w_b = 162 :N
  total = 534 :N
