src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_test_scope.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_test_scope/test_only.one\")"
---
Model: fixtures/design_test_scope/target.on
Tests: 1/2
  test 1: FAIL
  test 2: PASS
Parameters:
  width = 15 :m
  height = 5 :m
  $ ratio = 3
