src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__extract_with_partial_overlay.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"with_clause/mars_override.one\")"
---
Model: fixtures/with_clause/with_extract_through_mid.on
Tests: 0/0
Parameters:
  result = 2.688
  g_ref = 3.72 :m/s^2
  thrust_out = 1e3 :N
  mass_out = 100 :kg
