src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_anchor_scope_transitive.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"overlay_anchor_scope/anchor_scope_transitive.one\")"
---
Model: fixtures/overlay_anchor_scope/parent_transitive.on
Tests: 0/0
Parameters:
  multiplier = 6
  x = 12
